# aws-lambda-events

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
aws_lambda_events/: CHANGELOG.md  Cargo.toml  README.md  release.toml
aws_lambda_events/src/: custom_serde.rs  encodings.rs  event.rs  lib.rs  time_window.rs
aws_lambda_events/src/activemq/: mod.rs
aws_lambda_events/src/alb/: mod.rs
aws_lambda_events/src/apigw/: mod.rs
aws_lambda_events/src/appsync/: mod.rs
aws_lambda_events/src/autoscaling/: mod.rs
aws_lambda_events/src/chime_bot/: mod.rs
aws_lambda_events/src/clientvpn/: mod.rs
aws_lambda_events/src/cloudwatch-events/: cloudtrail.rs  codedeploy.rs  emr.rs  macie.rs  tag.rs
aws_lambda_events/src/cloudwatch_events/: cloudtrail.rs  codedeploy.rs  codepipeline.rs  ec2.rs  emr.rs  gamelift.rs  glue.rs  health.rs  kms.rs  macie.rs  mod.rs  opsworks.rs  signin.rs  sms.rs  ssm.rs  tag.rs  trustedadvisor.rs
aws_lambda_events/src/cloudwatch_logs/: mod.rs
aws_lambda_events/src/code_commit/: mod.rs
aws_lambda_events/src/codebuild/: mod.rs
aws_lambda_events/src/codedeploy/: mod.rs
aws_lambda_events/src/codepipeline_cloudwatch/: mod.rs
aws_lambda_events/src/codepipeline_job/: mod.rs
aws_lambda_events/src/cognito/: mod.rs
aws_lambda_events/src/config/: mod.rs
aws_lambda_events/src/connect/: mod.rs
aws_lambda_events/src/custom_serde/: codebuild_time.rs  mod.rs
aws_lambda_events/src/dynamodb/: attributes.rs  mod.rs
aws_lambda_events/src/ecr_scan/: mod.rs
aws_lambda_events/src/firehose/: mod.rs
aws_lambda_events/src/fixtures/: example-kafka-event.json
aws_lambda_events/src/iam/: mod.rs
aws_lambda_events/src/iot/: mod.rs
aws_lambda_events/src/iot_1_click/: mod.rs
aws_lambda_events/src/iot_button/: mod.rs
aws_lambda_events/src/iot_deprecated/: mod.rs
aws_lambda_events/src/kafka/: mod.rs
aws_lambda_events/src/kinesis/: analytics.rs  event.rs  mod.rs
aws_lambda_events/src/lambda_function_urls/: mod.rs
aws_lambda_events/src/lex/: mod.rs
aws_lambda_events/src/rabbitmq/: mod.rs
aws_lambda_events/src/s3/: batch_job.rs  event.rs  mod.rs  object_lambda.rs
aws_lambda_events/src/ses/: mod.rs
aws_lambda_events/src/sns/: mod.rs
aws_lambda_events/src/sqs/: mod.rs
aws_lambda_events/src/streams/: mod.rs
aws_lambda_events_codegen/: Cargo.toml  README.md
aws_lambda_events_codegen/go_to_rust/: Cargo.toml  README.md
aws_lambda_events_codegen/go_to_rust/src/: aws_go_events.pest  lib.rs
aws_lambda_events_codegen/go_to_rust/tests/: integration.rs
aws_lambda_events_codegen/go_to_rust/tests/fixtures/array_of_array/: expected.txt
aws_lambda_events_codegen/go_to_rust/tests/fixtures/field_doc_comment/: expected.txt
aws_lambda_events_codegen/src/: main.rs
src/: encodings.rs  lib.rs
(+36 files in other folders)
