[package]
name = "aws_lambda_events"
version = "0.2.1-pre"
description = "AWS Lambda event definitions"
authors = [
  "Christian Legnitto <christian@legnitto.com>",
  "Sam Rijs <srijs@airpost.net>"
]
license = "MIT"
homepage = "https://github.com/LegNeato/aws-lambda-events"
repository = "https://github.com/LegNeato/aws-lambda-events"
readme = "README.md"
keywords = ["lambda", "aws", "amazon", "events", "S3"]
categories = ["api-bindings", "encoding", "web-programming"]

[badges]
travis-ci = { repository = "LegNeato/aws-lambda-events" }

[dependencies]
base64 = "0.9.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.5.1"
