[package]
name = "aws_lambda_events"
version = "0.4.1-pre"
description = "AWS Lambda event definitions"
authors = [
  "Christian Legnitto <christian@legnitto.com>",
  "Sam Rijs <srijs@airpost.net>"
]
license = "MIT"
homepage = "https://github.com/LegNeato/aws-lambda-events"
repository = "https://github.com/LegNeato/aws-lambda-events"
readme = "README.md"
keywords = ["lambda", "aws", "amazon", "events", "S3"]
categories = ["api-bindings", "encoding", "web-programming"]

[badges]
travis-ci = { repository = "LegNeato/aws-lambda-events" }

[dependencies]
base64 = "0.12"
http = "0.2"
http-serde = "^1"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
bytes = { version = "0.5", features = ["serde"] }
chrono = { version = "^0.4.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.6"
