[package]
name = "aws_lambda_events_codegen"
version = "0.1.2"
authors = ["Christian Legnitto <christian@legnitto.com>"]
publish = false
edition = "2018"

[dependencies]
quicli = "0.4"
structopt = "0.2"
glob = "0.3"
go_to_rust = { path = "./go_to_rust" }
codegen = { git = "https://github.com/calavera/codegen.git", branch = "structure_attributes"}
toml_edit = "0.14.0"
