[package]
name = "go_to_rust"
version = "0.1.1"
authors = ["Christian Legnitto <christian@legnitto.com>"]
build = "build.rs"
publish = false
edition = "2018"

[[test]]
name = "integration"
harness = false

[dependencies]
log = "0.4"
pest = "^1.0"
pest_derive = "^1.0"
# Needed to pick up this PR: https://github.com/carllerche/codegen/pull/6
codegen = { git = "https://github.com/calavera/codegen.git", branch = "structure_attributes"}
failure = "0.1"
heck = "0.3"
regex = "^1.0"
lazy_static = "^1.0"

[dev-dependencies]
rustc-test ="0.3"
glob = "0.3"
env_logger = "0.7"
